kubernetes/yaml/canary/04argorollout/canary-pause/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: shark 
spec:
  replicas: 5
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: shark
  template:
    metadata:
      labels:
        app: shark
    spec:
      containers:
      - name: shark
        image: registry.cn-beijing.aliyuncs.com/zhengyansheng/nginx:v2.0
        # image: argoproj/rollouts-demo:green
        imagePullPolicy: Always
        ports:
        - containerPort: 80
  strategy:
    canary:
      steps:
      - setWeight: 20
      # The following pause step will pause the rollout indefinitely until manually resumed.
      # Rollouts can be manually resumed by running `kubectl argo rollouts promote ROLLOUT`
      - pause: {}
      - setWeight: 40
      - pause: {duration: 40s}
      - setWeight: 60
      - pause: {duration: 20s}
      - setWeight: 80
      - pause: {duration: 20s}
